--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "willdurand/negotiation": "~1.3"
+        "willdurand/negotiation": "~1.3",
+        "symfony/serializer": "~2.4"
     },
     "autoload": {
         "psr-0": { "": "src/" }
