--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
         "willdurand/negotiation": "~1.3",
         "symfony/serializer": "~2.4"
     },
+    "require-dev": {
+        "fabpot/Goutte": "~1.0"
+    },
     "autoload": {
         "psr-0": { "": "src/" }
     }
